0.9.3 - in development
----------------------
 * qlog: When you search on revision id or revision number, it selects the
   revision that matches, rather than filtering the ones that don't. This also
   faster.

0.9.2 - 2008-07-22
----------------------
This release is first step towards QBzr 1.0.

In this release QBzr introduce new qlog view with nice graph of revisions.
qcat window now allow you to see images as images, binary files as hex dump,
and target for versioned symlink. Side-by-side diff now able to show changes 
in image files; side-by-side and unidiff will show you changes in executable 
bit as well. Also you can specify in command line which files 
(added/removed/modified/renamed) you want to see in qdiff.

Also there is many other improvements and many bugfixes. 
See the list of user-visible changes below.

NOTES: when upgrading old installation of QBzr to 0.9.2, please uninstall
or remove old files first.

 * qannotate: 
    * Show tags (if any) for revision in revision message view (#149246)
 * qbrowse: 
    * Now supports any kind of URLs as branch location, not only local
      paths (#241930)
    * Double-click on file opens qcat window and show file content
      (#148028). Also user can run this action via context menu -> View file
 * qcat: 
    * Show content of image file as image (#242070) and hex dump for other
      binary files
    * Now able to show symlink target. Window title better reflects content
      type
 * qcommit: 
    * Don't show entire filename as extension if name started with dot
      (e.g. for .bzrignore files)
    * Set focus on Message Edit area if there is no saved message;
      otherwise set focus on OK button (#215271)
    * UI improvements:
        * user can walk with Tab key over all control widgets (#243177);
        * message saved not only when user press Cancel, but on other closing
          actions too (e.g. Alt+F4);
        * Ctrl+Enter in message edit area triggers commit action (#148156)
 * qdiff: 