@@ -3,6 +3,7 @@
  * qlog: When you search on revision id or revision number, it selects the
    revision that matches, rather than filtering the ones that don't. This also
    faster.
+ * qdiff: Added a refresh button.
 
 0.9.2 - 2008-07-22
 ----------------------
